--- a/gui-pod.yaml
+++ b/gui-pod.yaml
@@ -14,7 +14,7 @@ spec:
         app: guestbook-ui
     spec:
       containers:
-      - image: 
+      - image: us.gcr.io/spectral-macroapi/heptio-images/ks-guestbook-demo
         name: guestbook-ui
         ports:
         - containerPort: 80
